# vibogit

./: .gitignore  README.md  agents.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.factory/: init.sh  services.yaml
.factory/research/: github-gist-api.md  model-ids.md
.github/workflows/: release-desktop.yml
.playwright-cli/: page-2026-03-22T19-58-00-819Z.yml  page-2026-03-22T19-58-02-795Z.yml  page-2026-03-22T20-01-26-117Z.yml  page-2026-03-22T20-01-37-810Z.yml  page-2026-03-22T20-01-44-535Z.yml  page-2026-03-22T20-12-01-738Z.yml
apps/daemon/: README.md  package.json  tsconfig.json
apps/desktop/: UPDATER.md  package.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  git.rs  lib.rs  main.rs  tray.rs  watcher.rs
apps/web/: next.config.js  next.config.mjs  package.json  tailwind.config.ts  vercel.json
designs/: vibogit-reconstruction.pen
docs/prd/: auto-resize-textarea.md  auto-update.md  connection-status-bar.md  (+33 more)
homebrew/: README.md  vibogit.rb
homebrew-tap/: README.md
output/: ai-settings-assertions.md  release-report-3.5.0.json  release-report-3.6.0.json  release-report-3.7.0.json  release-report-3.7.6.json  release-report-3.7.7.json  release-report-3.8.3.json  release-report-3.8.4.json  release-report-3.8.5.json  release-report-3.8.7.json  release-report-3.8.8.json  release-report-4.0.0.json  release-report-4.0.2.json  val-push-assertions.md
(+178 files in other folders)
